--- a/x.html
+++ b/x.html
@@ -12,14 +12,10 @@
 
 <h3>X Syntax</h3>
 
-<p>Black = 4 bytes. <span class="blue">Pointer = 8 bytes.</span> <span class="green">Green = replacement.</span></p>
+<p>Black = 4 bytes. <span class="blue">Pointer = 4/8 bytes.</span></p>
 
 <table id="selection_table">
-	<tr><td>call_action_left</td><td class="blue">null/pointer</td><td class="blue">pointer</td><td class="green">A</td></tr>
+	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}/null</td><td>block_end</td></tr>
+	<tr><td>call_action_left</td><td class="blue">null/parent</td><td class="blue">function</td><td>args_end</td></tr>
 	<tr><td>math_end</td></tr>
-</table>
-
-<br>Table A:
-<table id="selection_table">
-	<tr><td>args_end</td></tr>
 </table>
