square bracket start was wrong compared there with a pointer

--- a/x.html
+++ b/x.html
@@ -8,6 +8,10 @@
 	{
 		color:blue;
 	}
+	.green
+	{
+		color:green;
+	}
 </style>
 
 <h3>X Syntax</h3>
@@ -16,6 +20,16 @@
 
 <table id="selection_table">
 	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}/null</td><td>block_end</td></tr>
-	<tr><td>call_action_left</td><td class="blue">null/parent</td><td class="blue">function</td><td>args_end</td></tr>
+	<tr><td>call_action_left</td><td class="blue">null/Members</td><td class="blue">function</td><td>args_end</td></tr>
+	<tr><td>ActionDefineLocal</td><td class="blue">name</td><td class="green">R</td></td>
 	<tr><td>math_end</td></tr>
 </table>
+
+<br>Table R:
+<table id="selection_table">
+	<tr><td>ap_Integer</td><td>number</td></tr>
+	<tr><td>ap_double</td><td>lowDoublePart</td><td>scanf1</td><td>scanf2</td></tr>
+	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
+</table>
+
+<br><div class="green">Right</div>
