--- a/x.html
+++ b/x.html
@@ -20,16 +20,37 @@
 
 <table id="selection_table">
 	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}/null</td><td>block_end</td></tr>
-	<tr><td>call_action_left</td><td class="blue">null/Members</td><td class="blue">function</td><td>args_end</td></tr>
-	<tr><td>ActionDefineLocal</td><td class="blue">name</td><td class="green">R</td></td>
+	<tr><td>call_action_left</td><td class="blue">null/M</td><td class="blue">function</td><td>args_end</td></tr>
+	<tr><td>ActionDefineLocal</td><td class="blue">name</td><td class="green">R</td></td></tr>
+	<tr><td>ActionSetMember</td><td class="green">M</td><td class="green">R</td></tr>
 	<tr><td>math_end</td></tr>
 </table>
 
-<br>Table R:
+<br>Table M: <!-- action_code_member<>action_member_loop -->
 <table id="selection_table">
-	<tr><td>ap_Integer</td><td>number</td></tr>
-	<tr><td>ap_double</td><td>lowDoublePart</td><td>scanf1</td><td>scanf2</td></tr>
-	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
+	<tr><td class="blue">owner</td><td class="blue">member</td></tr>
+	<tr>                           <td class="blue">no_pointer</td> <td>square_bracket_start</td><td class="green">RI</td></tr>
+	<tr>                           <td class="blue">no_pointer></td><td>member_end</td></tr>
 </table>
 
-<br><div class="green">Right</div>
+<br>Table R: <!-- action_parse_right<>action_code_right -->
+<table id="selection_table">
+	<tr><td><!-- definefunction --></td></tr>
+	<tr><td class="green">RI</td></tr>
+</table>
+
+<br>Table RI: <!-- action_code_row_parse_tool<>action_code_right_util -->
+<table id="selection_table">
+	<tr><td><!-- new var/memb --></td></tr>
+	<tr><td class="green">RG</td></tr>
+</table>
+
+<br>Table RG: <!-- action_parse_loop<>action_code_right_util[while] -->
+<table id="selection_table">
+	<tr><td>ap_Integer</td><td>number</td></tr>
+	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
+	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
+	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
+</table>
+
+<br><div class="green">Members Right RIght RiGht</div>
