--- a/x.html
+++ b/x.html
@@ -16,11 +16,11 @@
 
 <h3>X Syntax</h3>
 
-<p>Black = 4 bytes. <span class="blue">Pointer = 4/8 bytes.</span></p>
+<p>Black = 4 bytes. <span class="blue">Pointer = 4/8 bytes.</span> <span class="green">Green = replacement.</span></p>
 
 <table id="selection_table">
 	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}/null</td><td>block_end</td></tr>
-	<tr><td>call_action_left</td><td class="blue">null/M</td><td class="blue">function</td><td>args_end</td></tr>
+	<tr><td>call_action_left</td><td><span class="blue">null</span>/<span class="green">M</span></td><td class="blue">function</td><td>args_end</td></tr>
 	<tr><td>ActionDefineLocal</td><td class="blue">name</td><td class="green">R</td></td></tr>
 	<tr><td>ActionSetMember</td><td class="green">M</td><td class="green">R</td></tr>
 	<tr><td>math_end</td></tr>
