ap_Constant8 at RG

--- a/x.html
+++ b/x.html
@@ -51,6 +51,7 @@
 	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
 	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
 	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
+	<tr><td>ap_Constant8</td><td class="blue">string</td></tr>
 </table>
 
 <br><div class="green">Members Right RIght RiGht</div>
