--- a/x.html
+++ b/x.html
@@ -47,11 +47,18 @@
 
 <br>Table RG: <!-- action_parse_loop<>action_code_right_util[while] -->
 <table id="selection_table">
+	<tr><td><!-- compare/ifelse --></td></tr>
+	<tr><td class="green">RT</td></tr>
+</table>
+
+<br>Table RT: <!-- action_code_take_main<>action_code_right_number -->
+<table id="selection_table">
 	<tr><td>ap_Integer</td><td>number</td></tr>
 	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
 	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
 	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
 	<tr><td>ap_Constant8</td><td class="blue">string</td></tr>
+	<tr><td>parenthesis_start</td><td class="green">RI</td><td>math_end</td></tr>
 </table>
 
-<br><div class="green">Members Right RIght RiGht</div>
+<br><div class="green">Members Right RIght RiGht  RighT</div>
