--- a/x.html
+++ b/x.html
@@ -37,20 +37,28 @@
 	<tr><td class="green">2</td></tr>
 	<tr><td class="green">F</td></tr>
 	<tr><td>call_action_left</td><td class="green">C</td></tr>
-	<tr><td class="green" rowspan=2>I</td><td class="red" rowspan=2>{</td><td rowspan=2>else_flag</td><td class="green" colspan=2>I</td>               <td class="red" rowspan=2>}</td></tr>
-	<tr>                                                                                              <td class="green">{1}</td><td>block_else_end</td></tr>
+	<tr><td class="green" rowspan=2>I</td><td class="red" rowspan=2>{</td><td rowspan=2>else_flag</td><td class="green" colspan=2>I</td>                         <td class="red">}</td></tr>
+	<tr>                                                                                              <td class="green">{1}</td><td colspan=2>block_else_end</td></tr>
 	<tr><td>while_marker</td><td class="green">RG<sup-r>c</sup-r></td><td class="green">{1}</td><td>whileblock_end</td></tr>
+	<tr><td class="green">FR</td></tr>
+	<tr><td>break_flag</td></tr>
+	<tr><td>continue_flag</td></tr>
 	<tr><td>ActionReturn</td><td class="green">RG</td></tr>
 </table>
 
 <br>Table 2: <!-- action_parse_pack<>action_code_pack -->
 <table id="selection_table">
-	<tr><td>ActionSetVariable</td><td class="blue">name</td><td class="green">R</td></tr>
+	<tr><td class="green">L</td><td class="green">R</td></tr>
+	<tr><td>ActionDefineLocal2</td><td class="blue">name</td></tr>
 	<tr><td>ActionDelete</td><td class="green">M</td></tr>
 	<tr><td>ActionDelete2</td><td class="blue">name</td></tr>
-	<tr><td>ActionDefineLocal</td><td class="blue">name</td><td class="green">R</td></tr>
-	<tr><td>ActionDefineLocal2</td><td class="blue">name</td></tr>
-	<tr><td>ActionSetMember</td><td class="green">M</td><td class="green">R</td></tr>
+</table>
+
+<br>Table L: <!-- in packs, at for-in -->
+<table id="selection_table">
+	<tr><td>ActionDefineLocal</td><td class="blue">name</td></tr>
+	<tr><td>ActionSetVariable</td><td class="blue">name</td></tr>
+	<tr><td>ActionSetMember</td><td class="green">M</td></tr>
 </table>
 
 <br>Table C: <!-- action_code_parse_new_or_call<>action_code_new_or_call -->
@@ -58,9 +66,15 @@
 	<td><span class="blue">null</span>/<span class="green">M</span></td><td class="blue">function</td><td class="green">{RG}</td><td>args_end</td>
 </table>
 
-<br>Table F: <!-- action_code_parse_deffunction/action_definefunction -->
+<br>Table F: <!-- action_code_parse_deffunction<>action_definefunction -->
 <table id="selection_table">
 	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}/null</td><td class="green">{1}</td><td>block_end</td></tr>
+</table>
+
+<br>Table FR: <!--  action_parse_conditions<>action_code_write_conditions -->
+<table id="selection_table">
+	<tr><td rowspan=2>for_marker</td><td>for_three</td><td class="green">[2]</td><td>inter_for</td><td class="green">[2]</td><td>inter_for</td><td class="green">RG<sup-r>c</sup-r></td><td class="green">{1}</td><td rowspan=2>whileblock_end</td></tr>
+	<tr>                             <td class="green">RT</td> <td class="green" colspan=6>L</td></tr>
 </table>
 
 <br>Table If: <!-- at action_parse_conditions<>at action_code_write_conditions -->
@@ -106,10 +120,10 @@
 
 <br>Table R: <!-- in ...pack<>in ...pack -->
 <table id="selection_table">
+	<tr><td class="green">RI</td></tr>
 	<tr><td>ActionIncrement</td></tr>
 	<tr><td>ActionDecrement</td></tr>
 	<tr><td>mixt_equal</td><td class="green">OP</td><td class="green">RI</td></tr>
-	<tr><td class="green">RI</td></tr>
 </table>
 
 <br>Table RI: <!-- action_parse_right<>action_code_right -->
@@ -121,20 +135,25 @@
 <br>Table RG: <!-- action_code_row_parse_tool<>action_code_right_util -->
 <table id="selection_table">
 	<tr><td>new_action</td><td class="green">C</td></tr>
-	<tr><td class="green" rowspan=3>RT</td><td class="red" rowspan=3>{</td><td class="green">O+RT</td><td rowspan=2>[math_end]</td><td class="red" rowspan=3>}</td></tr>
-	<tr>                                                                   <td class="green">OC+RT</td></tr>
-	<tr>                                                                   <td>ifElse_start+<span class="green">RG</span>+<span class="green">RG</span></td></tr>
+	<tr><td class="green" rowspan=3>RH</td><td class="red" rowspan=3>{</td><td rowspan=3>[math_end]</td><td class="green">O+RH</td><td class="red" rowspan=2>}</td></tr>
+	<tr>                                                                                                <td class="green">OC+RH</td></tr>
+	<tr>                                                                                                <td colspan=3>ifElse_start+<span class="green">RG</span>+<span class="green">RG</span></td></tr>
 </table>
 
-<br>Table RT: <!-- in action_code_take_main<>action_code_right_number -->
+<br>Table RH: <!-- in action_code_take_main<>action_code_right_number -->
 <table id="selection_table">
 	<tr><td>ap_Integer</td><td>number</td></tr>
 	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
-	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
-	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
+	<tr><td class="green" colspan=2>RT</td></tr>
 	<tr><td>ap_Constant8</td><td class="blue">string</td></tr>
 	<tr><td>call_action_right</td><td class="green">C</td></tr>
 	<tr><td>parenthesis_start</td><td class="green">RG</td><td>math_end</td></tr>
 </table>
 
-<br><div class="green">1 2 Call <sup-r>c</sup-r> Function If Members Operation OPeration OperationCompare Right RIght RiGht RighT</div>
+<br>Table RT: <!-- action_code_take_pointer<>at for-in or ...right_number -->
+<table id="selection_table">
+	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
+	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
+</table>
+
+<br><div class="green">1 2 Call <sup-r>c</sup-r> Function If Left Members Operation OPeration OperationCompare Right RIght RiGht RigHt RighT</div>
