--- a/x.html
+++ b/x.html
@@ -85,10 +85,13 @@
 
 <br>Table M: <!-- action_code_member<>action_member_loop -->
 <table id="selection_table">
-	<tr><td class="blue" rowspan=4>owner</td><td class="red" rowspan=4>{</td><td class="blue" colspan=3>member</td>                                                      <td class="red" rowspan=2>}</td></tr>
-	<tr>                                                                     <td class="blue">no_pointer</td>      <td>square_bracket_start</td><td class="green">RG</td></tr>
-	<tr>                                                                     <td colspan=4><!-- end is not at first iteration --></td></tr>
-	<tr>                                                                     <td class="blue">no_pointer</td>      <td colspan=3>member_end</td></tr>
+	<tr><td class="blue" rowspan=2>owner</td><td class="green" rowspan=2>MS</td><td class="red" rowspan=2>{</td><td class="green">MS</td>       <td class="red">}</td></tr>
+	<tr>                                                                                                        <td class="blue">no_pointer</td><td>member_end</td></tr>
+</table>
+<br>Table MS: <!-- same -->
+<table id="selection_table">
+	<tr><td class="blue" colspan=3>member</td></td></tr>
+	<tr><td class="blue">no_pointer</td><td>square_bracket_start</td><td class="green">RG</td></tr>
 </table>
 
 <br>Table O: <!-- get_operations<>in RG loop -->
@@ -159,4 +162,4 @@
 	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
 </table>
 
-<br><div class="green">1 2 Call <sup-r>c</sup-r> Function If Left Members Operation OPeration OperationCompare Right RIght RiGht RigHt RighT</div>
+<br><div class="green">1 2 Call <sup-r>c</sup-r> Function If Left Members MemberS Operation OPeration OperationCompare Right RIght RiGht RigHt RighT</div>
