else jump can be unused

--- a/x.html
+++ b/x.html
@@ -37,8 +37,8 @@
 	<tr><td class="green">2</td></tr>
 	<tr><td class="green">F</td></tr>
 	<tr><td>call_action_left</td><td class="green">C</td></tr>
-	<tr><td class="green" rowspan=2>I</td><td class="red" rowspan=2>{</td><td rowspan=2>else_flag</td><td class="green" colspan=2>I</td>                         <td class="red">}</td></tr>
-	<tr>                                                                                              <td class="green">{1}</td><td colspan=2>block_else_end</td></tr>
+	<tr><td class="green" rowspan=2>I</td><td class="red" rowspan=2>{</td><td rowspan=2>else_flag</td><td class="green">I</td>  <td class="red">}</td></tr>
+	<tr>                                                                                              <td class="green">{1}</td><td>block_else_end</td><td>number_of_jumps_to_close</td></tr>
 	<tr><td>while_marker</td><td class="green">RG<sup-r>c</sup-r></td><td class="green">{1}</td><td>whileblock_end</td></tr>
 	<tr><td class="green">FR</td></tr>
 	<tr><td>break_flag</td></tr>
