--- a/x.html
+++ b/x.html
@@ -24,10 +24,10 @@
 	#ffdec_yes td {
 		border: 1px solid #0088FF;
 	}
-	.ffdec_yes_partial {
+	/*.ffdec_yes_partial {
 		border: 1px solid #0088FF !important;
 	}
-	/*#ffdec_no td {
+	#ffdec_no td {
 		border: 1px solid #FF8800;
 	}*/
 </style>
@@ -78,7 +78,7 @@
 
 <br>Table F: <!-- action_code_parse_deffunction<>action_definefunction -->
 <table id="selection_table">
-	<tr><td class="ffdec_yes_partial">function_action</td><td class="blue ffdec_yes_partial">name</td><td class="blue">{arguments}</td><td class="blue">null</td><td class="green">{1}</td><td>block_end</td></tr>
+	<tr id="ffdec_yes"><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}</td><td class="blue">null</td><td class="green">{1}</td><td>block_end</td></tr>
 </table>
 
 <br>Table FR: <!--  action_parse_conditions<>action_code_write_conditions -->
