at white spaces shifts and trails

--- a/x.html
+++ b/x.html
@@ -115,7 +115,7 @@
 	<tr><td>ActionMultiply</td></tr>
 	<tr><td>ActionDivide</td></tr>
 	<tr><td>ActionModulo</td></tr>
-	<tr><td>ActionAdd2</td></tr>
+	<tr id="ffdec_yes"><td>ActionAdd2</td></tr>
 	<tr><td>ActionBitAnd</tr></td>
 	<tr><td>ActionBitOr</tr></td>
 	<tr><td>ActionBitXor</tr></td>
@@ -167,7 +167,7 @@
 </table>
 
 <br>Table RT: <!-- action_code_take_pointer<>at for-in or ...right_number -->
-<table id="selection_table">
+<table id="ffdec_yes">
 	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
 	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
 </table>
