sd op and: and/or compat

--- a/x.html
+++ b/x.html
@@ -110,12 +110,12 @@
 </table>
 
 <br>Table O: <!-- get_operations<>in RG loop -->
-<table id="selection_table">
+<table id="ffdec_yes">
 	<tr><td>ActionSubtract</td></tr>
 	<tr><td>ActionMultiply</td></tr>
 	<tr><td>ActionDivide</td></tr>
 	<tr><td>ActionModulo</td></tr>
-	<tr id="ffdec_yes"><td>ActionAdd2</td></tr>
+	<tr><td>ActionAdd2</td></tr>
 	<tr><td>ActionBitAnd</tr></td>
 	<tr><td>ActionBitOr</tr></td>
 	<tr><td>ActionBitXor</tr></td>
