--- a/x.html
+++ b/x.html
@@ -157,12 +157,12 @@
 </table>
 
 <br>Table RH: <!-- in action_code_take_main<>action_code_right_number -->
-<table id="selection_table">
+<table id="ffdec_yes">
 	<tr><td class="green" colspan=2>RT</td></tr>
-	<tr id="ffdec_yes"><td>ap_Integer</td><td>number</td></tr>
+	<tr><td>ap_Integer</td><td>number</td></tr>
 	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
 	<tr><td>ap_Constant8</td><td class="blue">string</td></tr>
-	<tr id="ffdec_yes"><td>call_action_right</td><td class="green">C</td></tr>
+	<tr><td>call_action_right</td><td class="green">C</td></tr>
 	<tr><td>parenthesis_start</td><td class="green">RG</td><td>math_end</td></tr>
 </table>
 
