--- a/x.html
+++ b/x.html
@@ -21,7 +21,7 @@
 		font-size: small;
 		color:green;
 	}
-	#ffdec_yes td {
+	table td {
 		border: 1px solid #0088FF;
 	}
 	#ffdec_diff td {
@@ -37,13 +37,13 @@
 <p>Black = 4 bytes. <span class="blue">Pointer = 4/8 bytes.</span> <span class="green">Green = replacement.</span> <span class="red">Red.</span></p>
 <p><span style="color:#0088FF">Border = ffdec ok.</span> <span style="color:#FF8800">Border = ffdec ok, but with differences.</span></p>
 
-<table id="ffdec_yes">
+<table>
 	<tr><td class="green">1</td></tr>
 	<tr><td>math_end</td></tr>
 </table>
 
 <br>Table 1: <!-- action_code_row<>action__code_row -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="green">2</td></tr>
 	<tr><td class="green">F</td></tr>
 	<tr><td>call_action_left</td><td class="green">C</td></tr>
@@ -57,7 +57,7 @@
 </table>
 
 <br>Table 2: <!-- action_parse_pack<>action_code_pack -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="green">L</td><td class="green">R</td></tr>
 	<tr><td>ActionDefineLocal2</td><td class="blue">name</td></tr>
 	<tr><td>ActionDelete</td><td class="green">M</td></tr>
@@ -65,52 +65,52 @@
 </table>
 
 <br>Table L: <!-- in packs, at for-in -->
-<table id="ffdec_yes">
+<table>
 	<tr><td>ActionDefineLocal</td><td class="blue">name</td></tr>
 	<tr><td>ActionSetVariable</td><td class="blue">name</td></tr>
 	<tr><td>ActionSetMember</td><td class="green">M</td></tr>
 </table>
 
 <br>Table C: <!-- action_code_parse_new_or_call<>action_code_new_or_call -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="blue">function</td><td class="green">{RG}</td><td>args_end</td><td><span class="blue">null</span>/<span class="green">MC</span></td></tr>
 </table>
 
 <br>Table F: <!-- action_code_parse_deffunction<>action_definefunction -->
-<table id="ffdec_yes">
+<table>
 	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}</td><td class="blue">null</td><td class="green">{1}</td><td>block_end</td></tr>
 </table>
 
 <br>Table FR: <!--  action_parse_conditions<>action_code_write_conditions -->
-<table id="ffdec_yes">
+<table>
 	<tr><td rowspan=3>for</td><td>for_three</td>                 <td class="green">[2]</td>   <td>inter_for</td><td class="green">[2]</td><td>inter_for</td><td class="green">RG<sup-r>c</sup-r></td><td class="green" rowspan=3>{1}</td><td rowspan=3>whileblock_end</td></tr>
 	<tr>                      <td class="green" colspan=2>RT</td>                             <td class="green" colspan=4 rowspan=2>L</td></tr>
 	<tr id="ffdec_diff">      <td>ActionEnumerate</td>           <td class="blue">pattern</td></tr>
 </table>
 
 <br>Table If: <!-- at action_parse_conditions<>at action_code_write_conditions -->
-<table id="ffdec_yes">
+<table>
 	<td>ActionIf</td><td class="green">RG<sup-r>c</sup-r></td><td class="green">{1}</td><td>block_end</td>
 </table>
 
 <br>Table M: <!-- action_code_member<>action_member_loop -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="blue" rowspan=2>owner</td><td class="green" rowspan=2>MS</td><td class="red" rowspan=2>{</td><td class="green">MS</td>       <td class="red">}</td></tr>
 	<tr>                                                                                                        <td class="blue">no_pointer</td><td>member_end</td></tr>
 </table>
 <br>Table MS: <!-- same -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="blue" colspan=3>member</td></td></tr>
 	<tr><td class="blue">no_pointer</td><td>square_bracket_start</td><td class="green">RG</td></tr>
 </table>
 <br>Table MC: <!-- same -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="blue" rowspan=2>owner</td><td class="red" rowspan=2>{</td><td class="green">MS</td>       <td class="red">}</td></tr>
 	<tr>                                                                     <td class="blue">no_pointer</td><td>member_end</td></tr>
 </table>
 
 <br>Table O: <!-- get_operations<>in RG loop -->
-<table id="ffdec_yes">
+<table>
 	<tr><td>ActionSubtract</td></tr>
 	<tr><td>ActionMultiply</td></tr>
 	<tr><td>ActionDivide</td></tr>
@@ -127,7 +127,7 @@
 </table>
 
 <br>Table OC: <!-- get_operations<>in RG loop -->
-<table id="ffdec_yes">
+<table>
 	<tr><td rowspan=3>compare_action</td><td>ActionLess2</td><td>0/ActionNot</td></tr>
 	<tr>                                 <td>ActionGreater</td><td>0/ActionNot</td></tr>
 	<tr>                                 <td>ActionEquals2</td><td>0/ActionNot</td></tr>
@@ -135,20 +135,20 @@
 
 <br>Table R: <!-- in ...pack<>in ...pack -->
 <table>
-	<tr id="ffdec_yes"><td class="green">RI</td></tr>
+	<tr><td class="green">RI</td></tr>
 	<tr id="ffdec_diff"><td>ActionIncrement</td></tr>
 	<tr id="ffdec_diff"><td>ActionDecrement</td></tr>
 	<tr id="ffdec_diff"><td>mixt_equal</td><td class="green">O</td><td class="green">RI</td></tr>
 </table>
 
 <br>Table RI: <!-- action_parse_right<>action_code_right -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="green">F</td></tr>
 	<tr><td class="green">RG</td></tr>
 </table>
 
 <br>Table RG: <!-- action_code_row_parse_tool<>action_code_right_util -->
-<table id="ffdec_yes">
+<table>
 	<tr><td>new_action</td><td class="green">C</td></tr>
 	<tr><td class="green" rowspan=4>RH</td><td class="red" rowspan=4>{</td><td class="green">O+RH</td><td class="red" rowspan=2>}</td></tr>
 	<tr>                                                                   <td class="green">OC+RH</td></tr>
@@ -157,7 +157,7 @@
 </table>
 
 <br>Table RH: <!-- in action_code_take_main<>action_code_right_number -->
-<table id="ffdec_yes">
+<table>
 	<tr><td class="green" colspan=2>RT</td></tr>
 	<tr><td>ap_Integer</td><td>number</td></tr>
 	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
@@ -167,7 +167,7 @@
 </table>
 
 <br>Table RT: <!-- action_code_take_pointer<>at for-in or ...right_number -->
-<table id="ffdec_yes">
+<table>
 	<tr><td>ActionGetVariable</td><td class="blue">name</td></tr>
 	<tr><td>ActionGetMember</td><td class="green">M</td></tr>
 </table>
