--- a/x.html
+++ b/x.html
@@ -160,7 +160,7 @@
 <table>
 	<tr><td class="green" colspan=2>RT</td></tr>
 	<tr><td>ap_Integer</td><td>number</td></tr>
-	<tr><td>ap_double</td><td>scanf1</td><td>scanf2</td></tr>
+	<tr><td>ap_Double</td><td>scanf1</td><td>scanf2</td></tr>
 	<tr><td>ap_Constant8</td><td class="blue">string</td></tr>
 	<tr><td>call_action_right</td><td class="green">C</td></tr>
 	<tr><td>parenthesis_start</td><td class="green">RG</td><td>math_end</td></tr>
