9 xlog and 2 xlog_stepout

--- a/x.html
+++ b/x.html
@@ -78,7 +78,7 @@
 
 <br>Table F: <!-- action_code_parse_deffunction<>action_definefunction -->
 <table>
-	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}</td><td class="blue">null</td><td class="green">{1}</td><td>block_end</td></tr>
+	<tr><td>function_action</td><td class="blue">name</td><td class="blue">{arguments}</td><td class="blue">null</td><td class="green">{1}</td><td>function_marker</td></tr>
 </table>
 
 <br>Table FR: <!--  action_parse_conditions<>action_code_write_conditions -->
@@ -90,7 +90,7 @@
 
 <br>Table If: <!-- at action_parse_conditions<>at action_code_write_conditions -->
 <table>
-	<td>ActionIf</td><td class="green">RG<sup-r>c</sup-r></td><td class="green">{1}</td><td>block_end</td>
+	<td>ActionIf</td><td class="green">RG<sup-r>c</sup-r></td><td class="green">{1}</td><td>if_marker</td>
 </table>
 
 <br>Table M: <!-- action_code_member<>action_member_loop -->
