=-x   ,   .log for alt with .x for regrab

--- a/x.html
+++ b/x.html
@@ -24,7 +24,10 @@
 	table td {
 		border: 1px solid #0088FF;
 	}
-	#ffdec_diff td {
+	.ffdec_ok {
+		color:#0088FF
+	}
+	#ffdec_diff td, .ffdec_yes_partial {
 		border: 1px solid #FF8800;
 	}
 	/*.ffdec_yes_partial {
@@ -35,7 +38,7 @@
 <h3>X Syntax</h3>
 
 <p>Black = 4 bytes. <span class="blue">Pointer = 4/8 bytes.</span> <span class="green">Green = replacement.</span> <span class="red">Red.</span></p>
-<p><span style="color:#0088FF">Border = ffdec ok.</span> <span style="color:#FF8800">Border = ffdec ok, but with differences.</span></p>
+<p><span class="ffdec_ok">Border = ffdec ok.</span> <span style="color:#FF8800">Border = ffdec ok, but with differences, </span><span class="ffdec_ok">for Table R, use flag_noDuplicate to be same.</span></p>
 
 <table>
 	<tr><td class="green">1</td></tr>
@@ -138,7 +141,7 @@
 	<tr><td class="green">RI</td></tr>
 	<tr id="ffdec_diff"><td>ActionIncrement</td></tr>
 	<tr id="ffdec_diff"><td>ActionDecrement</td></tr>
-	<tr id="ffdec_diff"><td>mixt_equal</td><td class="green">O</td><td class="green">RI</td></tr>
+	<tr><td class="ffdec_yes_partial">mixt_equal</td><td class="green">O</td><td class="green">RI</td></tr>
 </table>
 
 <br>Table RI: <!-- action_parse_right<>action_code_right -->
