forward jump to label

--- a/x.html
+++ b/x.html
@@ -24,21 +24,24 @@
 	table td {
 		border: 1px solid #0088FF;
 	}
-	.ffdec_ok {
-		color:#0088FF
-	}
 	#ffdec_diff td, .ffdec_yes_partial {
 		border: 1px solid #FF8800;
 	}
 	/*.ffdec_yes_partial {
 		border: 1px solid #0088FF !important;
 	}*/
+	#anything td {
+		border: 1px solid #88FF88;
+	}
 </style>
 
 <h3>X Syntax</h3>
 
+<p><span style="border: 1px solid #0088FF">FFDec ok</span>
+<br><span style="border: 1px solid #FF8800">FFDec ok, but with differences</span> <span style="border: 1px solid #0088FF">for Table R, use flag_noDuplicate to be same</span>
+<br><span style="border: 1px solid #88FF88">Only a marker</span></p>
+
 <p>Black = 4 bytes. <span class="blue">Pointer = 4/8 bytes.</span> <span class="green">Green = replacement.</span> <span class="red">Red.</span></p>
-<p><span class="ffdec_ok">Border = ffdec ok.</span> <span style="color:#FF8800">Border = ffdec ok, but with differences, </span><span class="ffdec_ok">for Table R, use flag_noDuplicate to be same.</span></p>
 
 <table>
 	<tr><td class="green">1</td></tr>
@@ -72,6 +75,7 @@
 	<tr><td>ActionDefineLocal</td><td class="blue">name</td></tr>
 	<tr><td>ActionSetVariable</td><td class="blue">name</td></tr>
 	<tr><td>ActionSetMember</td><td class="green">M</td></tr>
+	<tr id="anything"><td>label</td><td>address</td></tr>
 </table>
 
 <br>Table C: <!-- action_code_parse_new_or_call<>action_code_new_or_call -->
